<resources>
    <string name="app_name">Quizry</string>
    <string name="title_home">Home</string>
    <!-- Strings related to login -->
    <string name="login_title">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 4+ characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>